# cuckoo

./: .cuckoo_miner.h.swp  .gitignore  .travis.yml  CMakeLists.txt  Cuckoo.java  CuckooMiner.java  CuckooSolve.java  GPU.md  GPU_tuning.md  LICENSE.txt  Makefile  README.md  SimpleMiner.java  bfs  bitcoin2015.tex  bounty_miner.cpp  bounty_miner.h  cmp_versions.sh  cuckoo  cuckoo.aux  cuckoo.bbl  cuckoo.bib  cuckoo.blg  cuckoo.c  cuckoo.h  cuckoo.out  cuckoo.tex  cuckoo120  cuckoo125  cuckoo128  cuckoo2.h  cuckoo20  cuckoo25  cuckoo_miner.c  cuckoo_miner.cpp  cuckoo_miner.h  cuckoo_solve.h  cuda_miner.cu  equihash  found.pl  (+15 more)
doc/: Makefile  Nano_PoW  blog  cuckoo.bib  cuckoo.tex  leancore  mathspec  pbkdf  simplesolve  spec
img/: grinlogo.ps
msvc/: cuckcuuda.sln  cuckcuuda.vcxproj
private/: comp.pl  cycle_freq.eps  fracs  fracs8  ketchup30  ketchup30.1  many125_1_1  many125_1_2  many125_2_2  many125_2_4  siphash-1-1a  siphash-2-2  siphash-2-3
speedup130.40/: siphash-1-1  siphash-1-2
src/: Cuckoo.java  Makefile  SimpleMiner.java  bitmap.hpp  bounty_miner.cpp  bounty_miner.h  compress.hpp  cuckatoo.c  cuckatoo.h  cuckoo.c  cuckoo.cl  cuckoo.h  cuckoo_main.cpp  cuckoo_miner.cpp  cuckoo_miner.h  cuckoo_miner.hpp  cuda_miner.cu  cycle_miner.cu  cyclebase.hpp  graph.hpp  hash_only.cpp  lean_miner.cpp  lean_miner.cu  lean_miner.hpp  lmeaner_miner.cu  matrix_miner.cpp  matrix_miner.hpp  mean_miner.c  mean_miner.cpp  mean_miner.cu  mean_miner.h  mean_miner.h.bak  mean_miner.hpp  meaner_miner.cu  momentomatum.cpp  momentomatum.h  sha256.c  simple_miner.cpp  siphash.cuh  (+5 more)
(+83 files in other folders)
